# scarlet-queen

./: .gitignore  .lintstagedrc  .lintstagedrc.cjs  COPYING  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
.direnv/: flake-profile-1-link
.github/ISSUE_TEMPLATE/: bug-report.yaml  chore-report.yaml  feature-request.yaml  update-report.yaml
.github/workflows/: core.yaml  dev-test.yaml  dev.yaml  entrypoint.yaml  fitness.yaml  format-and-push.yaml  format.yaml  generation.yaml  generator.yaml  initializer.yaml  prod-test.yaml  prod.yaml  replenisher.yaml  selector.yaml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  pokemon_type.rs
crates/entrypoint/: Cargo.toml
crates/entrypoint/src/: main.rs
crates/fitness/: Cargo.toml
crates/fitness/src/: effective.rs  lib.rs  pokemon_type.rs
crates/generation/: Cargo.toml
crates/generation/src/: individual.rs  lib.rs
crates/generator/: Cargo.toml
crates/generator/src/: lib.rs
crates/initializer/: Cargo.toml
crates/initializer/src/: group.rs  lib.rs
crates/replenisher/: Cargo.toml
crates/replenisher/src/: lib.rs
crates/scarlet-queen-core/: Cargo.toml
crates/scarlet-queen-core/src/: lib.rs  (+3 more)
crates/scarlet-queen-entrypoint/: Cargo.toml
crates/scarlet-queen-fitness/: Cargo.toml
crates/scarlet-queen-generation/: Cargo.toml
crates/scarlet-queen-generation/src/: group.rs  individual.rs  lib.rs  tmp.rs
crates/scarlet-queen-initializer/: Cargo.toml
crates/scarlet-queen-replenisher/: Cargo.toml
crates/scarlet-queen-selector/: Cargo.toml
crates/selector/: Cargo.toml
(+12 files in other folders)
