[workspace]
resolver = "2"
members = [ "crates/core","crates/entrypoint", "crates/fitness", "crates/generation", "crates/replenisher", "crates/initializer", "crates/selector"]

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]

[workspace.dev-dependencies]
cargo-husky = {version = "1.5.0", features = ["run-cargo-fmt"]}
